<resources>
    <string name="app_name" translatable="false">ProjetcalculeMental</string>
    <string name="play">play</string>
    <string name="score">score</string>
    <string name="Valid">Valid</string>
    <string name="operation">Operation</string>

    <string name="operation_template"  translatable="false">%1$s %2$s %3$s</string>

    <string name="correct">Correct</string>
    <string name="False">False</string>
    <string name="Input">Input</string>
    <string name="Last_score">Last_score</string>
    <string name="Score">Score</string>
    <string name="score_menu_label">Score_menu_label</string>
    <string name="cleanscore_menu_label">cleanscore_menu_label</string>
    <string name="previous">Previous</string>
    <string name="Time">Timer</string>
    <string name="start">START</string>
    <string name="Time_Out">Time Out</string>
    <string name="easy">Easy</string>
    <string name="Standare">Standard</string>
    <string name="Hard">Hard</string>
    <string name="counter">Counter</string>
</resources>