<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dificultes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Facile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <Button
            android:id="@+id/Moyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Standare" />

        <Button
            android:id="@+id/Difficile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hard" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>